# Daybreak

./: .gitignore  CMakeLists.txt
Daybreak3D_Editor/: CMakeLists.txt  main.cpp  qt.conf
Daybreak3D_Editor/GUI/: EditorWindow.cpp  EditorWindow.h
Daybreak3D_Editor/UI/: editorwindow.ui  infowidget.ui
Daybreak3D_Editor/Widgets/: EngineWidget.cpp  EngineWidget.h  InfoWidget.cpp  InfoWidget.h
Daybreak3D_GFX/: CMakeLists.txt
Daybreak3D_GFX/backends/: CMakeLists.txt
Daybreak3D_GFX/backends/common/: CMakeLists.txt
Daybreak3D_GFX/backends/common/include/db3d/backend/: backend.h  common_exports.c  common_state.h  common_validation.h  default_descs.h  format_helpers.h  render_common.h  slot.h  types.h  utils.h
Daybreak3D_GFX/backends/common/src/: common_validation.c  default_descs.c  format_helpers.c  render_common.c  slot.c  utils.c
Daybreak3D_GFX/backends/d3d11/: CMakeLists.txt
Daybreak3D_GFX/backends/d3d11/include/: d3d11_bindings.h  d3d11_buffer.h  d3d11_converters.h  d3d11_pass.h  d3d11_pipeline.h  d3d11_pools.h  d3d11_shader.h  d3d11_types.h  priv_utils.h  state.h
Daybreak3D_GFX/backends/d3d11/src/: d3d11_bindings.c  d3d11_buffer.c  d3d11_converters.c  d3d11_pass.c  d3d11_pipeline.c  d3d11_pools.c  d3d11_shader.c  exports.c  lib.c
Daybreak3D_GFX/backends/vulkan/: CMakeLists.txt
Daybreak3D_GFX/backends/vulkan/include/: vulkan_converters.h  vulkan_debug.h  vulkan_image.h  vulkan_pass.h  vulkan_pipeline.h  vulkan_pools.h  vulkan_shader.h  vulkan_state.h  vulkan_swapchain.h  vulkan_types.h  vulkan_utils.h
Daybreak3D_GFX/backends/vulkan/src/: converters.c  debug.c  exports.c  image.c  lib.c  pass.c  pipeline.c  shader.c  swapchain.c  vulkan_utils.c
Daybreak3D_GFX/gfx/: CMakeLists.txt
Daybreak3D_GFX/gfx/include/daybreak/gfx/: common.h  db3d_gfx.h  debug.h  types.h  version.h
Daybreak3D_GFX/loader/: CMakeLists.txt
Daybreak3D_GFX/loader/tools/: generator.py
Daybreak3D_GFX/tests/: CMakeLists.txt  test_load.c  test_shaders.h
DaybreakCommon/: CMakeLists.txt
DaybreakCommon/include/daybreak/: hedley.h
DaybreakCommon/include/daybreak/utils/: assert.h  pools.h
DaybreakCommon/src/: assert.c  pools.c
DaybreakCommon/tests/: CMakeLists.txt  pool.cpp
DaybreakLauncher/: CMakeLists.txt  main.cpp
cmake/: Daybreak3DConfig.cmake.in
